# sprint-task-constraints

./: .gitignore  example_sprint.json  pyproject.toml
src/task_constraint/: cli.py  model.py  solver.py
src/task_constraint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
